chore: update author information and ignore generated reports
- Update author email to esanchez@m2iab.com in Cargo.toml
- Add code_review_report.md to .gitignore to exclude generated reports from version control

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,7 @@
 name = "ai_buddy"
 version = "0.1.0"
 edition = "2021"
-authors = ["Edgar Sanchez <edgar@example.com>"]
+authors = ["Edgar H. Sanchez <esanchez@m2iab.com>"]
 description = "An AI-powered code review tool that analyzes Git repositories and provides intelligent feedback"
 readme = "README.md"
 homepage = "https://github.com/edgarhsanchez/ai_buddy"
