--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -54,9 +54,6 @@ jobs:
           - os: macos-latest
             target: x86_64-apple-darwin
             asset_name: ai_buddy-macos-x86_64
-          - os: macos-latest
-            target: aarch64-apple-darwin
-            asset_name: ai_buddy-macos-aarch64
 
     steps:
     - name: Checkout code
@@ -80,6 +77,9 @@ jobs:
 
     - name: Build binary
       run: cargo build --release --target ${{ matrix.target }}
+      env:
+        CARGO_NET_RETRY: 10
+        RUSTFLAGS: "-C target-cpu=generic"
 
     - name: Prepare binary for upload
       shell: bash
