--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -64,6 +64,13 @@ jobs:
       with:
         targets: ${{ matrix.target }}
 
+    - name: Install dependencies (macOS)
+      if: runner.os == 'macOS'
+      run: |
+        brew install openssl@3
+        echo "OPENSSL_DIR=$(brew --prefix openssl@3)" >> $GITHUB_ENV
+        echo "OPENSSL_ROOT_DIR=$(brew --prefix openssl@3)" >> $GITHUB_ENV
+
     - name: Cache dependencies
       uses: actions/cache@v4
       with:
@@ -76,19 +83,31 @@ jobs:
         key: ${{ runner.os }}-${{ matrix.target }}-cargo-${{ hashFiles('**/Cargo.lock') }}
 
     - name: Build binary
-      run: cargo build --release --target ${{ matrix.target }}
+      run: |
+        if [[ "${{ matrix.os }}" == "macos-latest" && "${{ matrix.target }}" == "x86_64-apple-darwin" ]]; then
+          # Native build for macOS to avoid OpenSSL cross-compilation issues
+          cargo build --release
+          cp target/release/ai_buddy ${{ matrix.asset_name }}
+        else
+          cargo build --release --target ${{ matrix.target }}
+          if [[ "${{ matrix.os }}" == "windows-latest" ]]; then
+            cp target/${{ matrix.target }}/release/ai_buddy.exe ${{ matrix.asset_name }}
+          else
+            cp target/${{ matrix.target }}/release/ai_buddy ${{ matrix.asset_name }}
+          fi
+        fi
       env:
         CARGO_NET_RETRY: 10
         RUSTFLAGS: "-C target-cpu=generic"
+        # OpenSSL configuration for cross-compilation
+        OPENSSL_STATIC: "1"
+        OPENSSL_NO_VENDOR: "1"
 
     - name: Prepare binary for upload
       shell: bash
       run: |
-        if [[ "${{ matrix.os }}" == "windows-latest" ]]; then
-          cp target/${{ matrix.target }}/release/ai_buddy.exe ${{ matrix.asset_name }}
-        else
-          cp target/${{ matrix.target }}/release/ai_buddy ${{ matrix.asset_name }}
-        fi
+        # Binary should already be prepared in the build step
+        ls -la ${{ matrix.asset_name }}
 
     - name: Upload Release Asset
       uses: actions/github-script@v7
