--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ readme = "README.md"
 homepage = "https://github.com/edgarhsanchez/ai_buddy"
 repository = "https://github.com/edgarhsanchez/ai_buddy"
 license = "MIT"
-keywords = ["ai", "code-review", "git", "analysis", "cli", "buddy"]
+keywords = ["ai", "code-review", "git", "analysis", "cli"]
 categories = ["command-line-utilities", "development-tools"]
 
 [dependencies]
