--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,8 +5,8 @@ edition = "2021"
 authors = ["Edgar H. Sanchez <esanchez@m2iab.com>"]
 description = "An AI-powered code review tool that analyzes Git repositories and provides intelligent feedback"
 readme = "README.md"
-homepage = "https://github.com/edgarhsanchez/ai_buddy"
-repository = "https://github.com/edgarhsanchez/ai_buddy"
+homepage = "https://github.com/edgarhsanchez/ai_code_buddy"
+repository = "https://github.com/edgarhsanchez/ai_code_buddy"
 license = "MIT"
 keywords = ["ai", "code-review", "git", "analysis", "cli"]
 categories = ["command-line-utilities", "development-tools"]
@@ -16,6 +16,9 @@ kalosm = { version = "0.4.0", features = ["language"] }
 tokio = { version = "1.47.0", features = ["full"] }
 chrono = { version = "0.4", features = ["serde"] }
 serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
 git2 = "0.19"
 anyhow = "1.0"
 regex = "1.0"
+glob = "0.3"
+clap = { version = "4.0", features = ["derive"] }
