--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,3 +22,5 @@ anyhow = "1.0"
 regex = "1.0"
 glob = "0.3"
 clap = { version = "4.0", features = ["derive"] }
+ratatui = "0.28"
+crossterm = "0.27"
