--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -54,7 +54,7 @@ jobs:
           - runs-on: macos-13
             target: x86_64-apple-darwin
             asset_name: ai-code-buddy-macos-x86_64
-          - runs-on: [self-hosted, macOS, ARM64]
+          - runs-on: macos-13
             target: aarch64-apple-darwin
             asset_name: ai-code-buddy-macos-aarch64
 
