Simplify workflows to use only self-hosted macOS ARM64 runner
- Update CI workflow to only run on self-hosted runner with stable/beta Rust
- Update Release workflow to only build aarch64-apple-darwin binaries
- Update Security workflow to use self-hosted runner
- Remove Windows and Linux build configurations
- Simplify build steps for macOS-only environment
- Keep crates.io publishing for single platform release

--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -12,7 +12,7 @@ on:
 jobs:
   security_audit:
     name: Security Audit
-    runs-on: ubuntu-latest
+    runs-on: [self-hosted, macOS, ARM64]
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
@@ -33,7 +33,7 @@ jobs:
 
   dependency_check:
     name: Dependency Check
-    runs-on: ubuntu-latest
+    runs-on: [self-hosted, macOS, ARM64]
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
