--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,10 +12,9 @@ env:
 jobs:
   test:
     name: Test
-    runs-on: ${{ matrix.os }}
+    runs-on: [self-hosted, macOS, ARM64]
     strategy:
       matrix:
-        os: [ubuntu-latest, windows-latest, macos-latest]
         rust: [stable, beta]
 
     steps:
@@ -51,19 +50,12 @@ jobs:
 
   build:
     name: Build
-    runs-on: ${{ matrix.runs-on }}
+    runs-on: [self-hosted, macOS, ARM64]
     needs: test
     strategy:
       matrix:
         include:
-          - runs-on: ubuntu-latest
-            target: x86_64-unknown-linux-gnu
-          - runs-on: windows-latest
-            target: x86_64-pc-windows-msvc
-          - runs-on: macos-latest
-            target: x86_64-apple-darwin
-          - runs-on: [self-hosted, macOS, ARM64]
-            target: aarch64-apple-darwin
+          - target: aarch64-apple-darwin
 
     steps:
     - name: Checkout code
@@ -93,4 +85,4 @@ jobs:
       with:
         name: ai_code_buddy-${{ matrix.target }}
         path: |
-          target/${{ matrix.target }}/release/ai_code_buddy${{ contains(matrix.runs-on, 'windows-latest') && '.exe' || '' }}
+          target/${{ matrix.target }}/release/ai_code_buddy
