--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -41,21 +41,11 @@ jobs:
   build-and-upload:
     name: Build and Upload
     needs: create-release
-    runs-on: ${{ matrix.runs-on }}
+    runs-on: [self-hosted, macOS, ARM64]
     strategy:
       matrix:
         include:
-          - runs-on: ubuntu-latest
-            target: x86_64-unknown-linux-gnu
-            asset_name: ai-code-buddy-linux-x86_64
-          - runs-on: windows-latest
-            target: x86_64-pc-windows-msvc
-            asset_name: ai-code-buddy-windows-x86_64.exe
-          - runs-on: macos-13
-            target: x86_64-apple-darwin
-            asset_name: ai-code-buddy-macos-x86_64
-          - runs-on: macos-13
-            target: aarch64-apple-darwin
+          - target: aarch64-apple-darwin
             asset_name: ai-code-buddy-macos-aarch64
 
     steps:
@@ -68,7 +58,6 @@ jobs:
         targets: ${{ matrix.target }}
 
     - name: Install dependencies (macOS)
-      if: runner.os == 'macOS'
       run: |
         # Check if Homebrew is available, install if needed
         if ! command -v brew &> /dev/null; then
@@ -92,40 +81,13 @@ jobs:
           target
         key: ${{ runner.os }}-${{ matrix.target }}-cargo-${{ hashFiles('**/Cargo.lock') }}
 
-    - name: Build binary (Linux)
-      if: runner.os == 'Linux'
-      run: |
-        cargo build --release --target ${{ matrix.target }}
-        cp target/${{ matrix.target }}/release/ai-code-buddy ${{ matrix.asset_name }}
-      env:
-        CARGO_NET_RETRY: 10
-        RUSTFLAGS: "-C target-cpu=generic"
-
-    - name: Publish to crates.io (Linux only)
-      if: runner.os == 'Linux'
-      run: |
-        echo "📦 Publishing to crates.io..."
-        cargo publish --allow-dirty
-      env:
-        CARGO_REGISTRY_TOKEN: ${{ secrets.CARGO_REGISTRY_TOKEN }}
-
-    - name: Build binary (Windows)
-      if: runner.os == 'Windows'
-      run: |
-        cargo build --release --target ${{ matrix.target }}
-        cp target/${{ matrix.target }}/release/ai-code-buddy.exe ${{ matrix.asset_name }}
-      env:
-        CARGO_NET_RETRY: 10
-        RUSTFLAGS: "-C target-cpu=generic"
-
-    - name: Build binary (macOS)
-      if: runner.os == 'macOS'
+    - name: Build binary
       shell: bash
       run: |
         echo "Building for target: ${{ matrix.target }}"
         echo "Runner architecture: $(uname -m)"
         
-        # Always use native build for macOS to avoid ring crate issues
+        # Use native build for macOS ARM64
         cargo build --release
         cp target/release/ai-code-buddy ${{ matrix.asset_name }}
         
@@ -142,6 +104,13 @@ jobs:
       run: |
         # Binary should already be prepared in the build step
         ls -la ${{ matrix.asset_name }}
+
+    - name: Publish to crates.io
+      run: |
+        echo "📦 Publishing to crates.io..."
+        cargo publish --allow-dirty
+      env:
+        CARGO_REGISTRY_TOKEN: ${{ secrets.CARGO_REGISTRY_TOKEN }}
 
     - name: Upload Release Asset
       uses: actions/github-script@v7
