--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -17,8 +17,11 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v4
 
-    - name: Install Rust
-      uses: dtolnay/rust-toolchain@stable
+    - name: Setup Rust toolchain
+      run: |
+        # Use system-installed Rust on self-hosted runner
+        rustup toolchain install stable
+        rustup default stable
 
     - name: Install cargo-audit
       run: cargo install cargo-audit
@@ -38,8 +41,11 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v4
 
-    - name: Install Rust
-      uses: dtolnay/rust-toolchain@stable
+    - name: Setup Rust toolchain
+      run: |
+        # Use system-installed Rust on self-hosted runner
+        rustup toolchain install stable
+        rustup default stable
 
     - name: Install cargo-outdated
       run: cargo install cargo-outdated
