--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -39,4 +39,6 @@ jobs:
       run: cargo install cargo-outdated
 
     - name: Check for outdated dependencies
-      run: cargo outdated --exit-code 1
+      run: |
+        echo "📦 Checking for outdated dependencies..."
+        cargo outdated || echo "⚠️ Some dependencies are outdated but this won't fail the build"
