--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -6,6 +6,11 @@ on:
   pull_request:
     branches: [ main ]
 
+permissions:
+  contents: read
+  issues: write
+  pull-requests: write
+
 jobs:
   coverage:
     name: Generate Coverage Report
@@ -90,7 +95,7 @@ jobs:
         fi
 
     - name: Comment PR with coverage
-      if: github.event_name == 'pull_request'
+      if: github.event_name == 'pull_request' && github.event.pull_request.head.repo.fork == false
       uses: actions/github-script@v7
       with:
         script: |
