--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -2,6 +2,8 @@ name: Release & Publish
 
 on:
   push:
+    branches:
+      - main
     tags:
       - 'v*'
 
@@ -54,6 +56,7 @@ jobs:
     name: Build Release Binary
     runs-on: [self-hosted, macOS, ARM64]
     needs: pre-release-checks
+    if: github.event_name == 'push' && github.ref_type == 'tag'
     outputs:
       version: ${{ steps.version.outputs.version }}
     steps:
@@ -118,6 +121,7 @@ jobs:
     name: Create GitHub Release
     runs-on: ubuntu-latest
     needs: build-release
+    if: github.event_name == 'push' && github.ref_type == 'tag'
     outputs:
       upload_url: ${{ steps.create_release.outputs.upload_url }}
     steps:
@@ -222,6 +226,7 @@ jobs:
     name: Publish to crates.io
     runs-on: [self-hosted, macOS, ARM64]
     needs: [build-release, create-github-release]
+    if: github.event_name == 'push' && github.ref_type == 'tag'
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
